임시토큰 기반 인증 -> 토큰 기반 인증으로 수정하면서 코드 리팩토링 및 POST /api/verify에 대한 비지니스 로직 구현과 Swagger 수정
